# palindrom-testy

./: CMakeLists.txt  README.md  gen.py  generate.py  generuj.sh  opt  parse.py  porownaj.sh  tester.c
tests/: test1r1w.c  tester.h  twoqueues.c
wyniki/1-2-3/: in  out
wyniki/1-2-3-4/: in  out
wyniki/119P4H1V0/: in  name  out
wyniki/135-degree_MWSS-to-G/: in  name  out
wyniki/15x1/: 1.in  1.out
wyniki/15x15/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/15x2/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/15x25/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/15x26/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/15x4/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/15x7/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/180-degree_kickback/: in  name  out
wyniki/1x1/: 3.out
wyniki/1x15/: 1.in  1.out  2.in  2.out  3.in
wyniki/1x2/: 1.in  2.in  2.out  3.out
wyniki/1x25/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/1x26/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  7.in  7.out
wyniki/1x4/: 1.in  2.in  2.out  3.in  3.out  7.out
wyniki/1x50/: 10.in  10.out  2.in  2.out  3.in  3.out  7.in  7.out
wyniki/1x7/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/2-engine_Cordership/: in  name  out
wyniki/2-glider_mess/: in  name  out
wyniki/25P3H1V0_1/: in  name  out
wyniki/25P3H1V0_2/: in  name  out
wyniki/25x1/: 2.out  3.in
wyniki/25x15/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/25x2/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/25x25/: 1.in  1.out  2.in  2.out  3.in  3.out
wyniki/25x26/: 1.in  1.out  2.in  2.out  3.in  (+1 more)
(+1860 files in other folders)
